syntax = "proto3";
package account.job_role;

import "account/job-role/job-role.proto";
import "google/protobuf/wrappers.proto";

/* Used for POST, PUT, and PATCH. 
 * Next Id: 4 */
message WriteJobRoleRequest {
  google.protobuf.StringValue name = 1;
  oneof parent {
    string client_id = 2;
    string root_id = 3;
  }
}

/* Used for fetching a single job role. 
 * Next Id: 2 */
message GetJobRoleResponse {
  account.job_role.JobRole job_role = 1;
}

/* Used for Listing job roles. 
 * Next Id: 3 */
message ListJobRoleResponse {
  repeated account.job_role.JobRole job_roles = 1;
  int32 matchCount = 2;
}
